--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="assignments1.css">
 </head>
 <body>
-    <a href="first.html">home</a>
+    <nav class="nav-bar">
+        <Div class="Name">Alt School Africa</Div>
+        <ul class="navlist">
+            <li><a href="index.html">assignment1</a></li>
+            <li><a href="assignment2.html">assignment2</a></li>
+            <li><a href="assignment3.html">assignment3</a></li>
+            <li><a href="assignment4.html">assignment4</a></li>
+        </ul>
+    </nav>
 <article>
     <h1> An Otter Essay</h1>
     <p>Otters have long, slim bodies and relatively short limbs. Their most striking
