--- a/assignment2.html
+++ b/assignment2.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="assignment2.css"> 
 </head>
 <body>
+  <nav class="nav-bar">
+    <Div class="Name">Alt School Africa</Div>
+    <ul class="navlist">
+        <li><a href="index.html">assignment1</a></li>
+        <li><a href="assignment2.html">assignment2</a></li>
+        <li><a href="assignment3.html">assignment3</a></li>
+        <li><a href="assignment4.html">assignment4</a></li>
+    </ul>
+</nav>
     <div class="wrapper">
         <div id="main">
           <section class="top">
