--- a/assignment3.html
+++ b/assignment3.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="assignment3.css" />
   </head>
   <body>
+    <nav class="nav-bar">
+      <Div class="Name">Alt School Africa</Div>
+      <ul class="navlist">
+          <li><a href="index.html">assignment1</a></li>
+          <li><a href="assignment2.html">assignment2</a></li>
+          <li><a href="assignment3.html">assignment3</a></li>
+          <li><a href="assignment4.html">assignment4</a></li>
+      </ul>
+  </nav>
     <section id="main">
       <div class="New">
         <h2>New and Improved!</h2>
