--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="assignments1.css">
-</head>
-<body>
-    <nav class="nav-bar">
-        <Div class="Name">Alt School Africa</Div>
+    <link rel="stylesheet" href="assignments1.css" />
+    <link rel="stylesheet" href="nav.css" />
+  </head>
+  <body>
+    <header>
+      <div class="Name">Alt School Africa</div>
+      <nav class="nav-bar">
         <ul class="navlist">
-            <li><a href="index.html">assignment1</a></li>
-            <li><a href="assignment2.html">assignment2</a></li>
-            <li><a href="assignment3.html">assignment3</a></li>
-            <li><a href="assignment4.html">assignment4</a></li>
+          <li><a href="index.html">assignment1</a></li>
+          <li><a href="assignment2.html">assignment2</a></li>
+          <li><a href="assignment3.html">assignment3</a></li>
+          <li><a href="assignment4.html">assignment4</a></li>
         </ul>
-    </nav>
-<article>
-    <h1> An Otter Essay</h1>
-    <p>Otters have long, slim bodies and relatively short limbs. Their most striking
-        anatomical features are the powerful webbed feet used to swim, and their
-        seal-like abilities holding breath underwater.
-    </p>
-</article>
-</body>
+      </nav>
+    </header>
+    <article>
+      <h1>An Otter Essay</h1>
+      <p>
+        Otters have long, slim bodies and relatively short limbs. Their most
+        striking anatomical features are the powerful webbed feet used to swim,
+        and their seal-like abilities holding breath underwater.
+      </p>
+    </article>
+  </body>
 </html>
-
-
