--- a/assignment3.html
+++ b/assignment3.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="assignment3.css" />
+    <link rel="stylesheet" href="nav.css">
   </head>
   <body>
-    <nav class="nav-bar">
-      <Div class="Name">Alt School Africa</Div>
-      <ul class="navlist">
+    <header>
+      <div class="Name">Alt School Africa</div>
+      <nav class="nav-bar">
+        <ul class="navlist">
           <li><a href="index.html">assignment1</a></li>
           <li><a href="assignment2.html">assignment2</a></li>
           <li><a href="assignment3.html">assignment3</a></li>
           <li><a href="assignment4.html">assignment4</a></li>
-      </ul>
-  </nav>
+        </ul>
+      </nav>
+    </header>
     <section id="main">
       <div class="New">
         <h2>New and Improved!</h2>
